# raftbook

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
crates/api/: Cargo.toml  build.rs
crates/api/src/: lib.rs  server.rs
crates/api/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs  types.rs
crates/api/src/grpc/: mod.rs  service.rs
crates/command_handler/: Cargo.toml
crates/command_handler/src/: lib.rs
crates/command_handler/tests/: command_handler.rs
crates/engined/: Cargo.toml
crates/engined/src/: main.rs  seed.rs
crates/event_log/: Cargo.toml
crates/event_log/src/: lib.rs
crates/matching_engine/: Cargo.toml
crates/matching_engine/src/: lib.rs
crates/matching_engine/tests/: matching.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  client.ts  index.css  main.tsx  queries.ts
frontend/src/components/: NavBar.tsx
frontend/src/pages/: Dashboard.tsx  EventStream.tsx  Explorer.tsx  TradeForm.tsx
proto/: exchange.proto
scripts/: restart.sh  start.sh  stop.sh
sql/: 001_event_log.sql
